--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t4.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t4.twig
@@ -20,7 +20,7 @@
       },
       contentItems: [{
         pattern: "image",
-        src: "/images/sample/product-background-t2.jpg"
+        src: "/pattern-lab/images/content/backgrounds/background-tall-3.jpg"
       }]
     },
     primaryTeaser: {
@@ -233,8 +233,9 @@
           device: "ipad",
           orientation: "landscape",
           color: "black",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--tablet.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--tablet.jpg"
           }
         } only %}
       {% endcell %}
@@ -262,8 +263,9 @@
           device: "ipad",
           orientation: "portrait",
           color: "black",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--tablet-portrait.png"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--tablet-portrait.jpg"
           }
         } only %}
       {% endcell %}
@@ -381,8 +383,9 @@
           device: "iphone8",
           orientation: "portrait",
           color: "black",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -392,8 +395,9 @@
           device: "iphone8",
           orientation: "portrait",
           color: "gold",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -403,8 +407,9 @@
           device: "iphone8",
           orientation: "landscape",
           color: "gold",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -415,8 +420,9 @@
           device: "iphone8",
           orientation: "landscape",
           color: "black",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -507,8 +513,9 @@
           device: "macbook",
           orientation: "landscape",
           color: "black",
+          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--desktop.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--desktop.jpg"
           }
         } only %}
       {% endcell %}
@@ -566,14 +573,14 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
           text: "Article"
         },
         "logo": {
-          src: "/images/sample/PayPal-logo.svg"
+          src: "/pattern-lab/images/content/logos/logo-paypal.svg"
         },
         "headlines": [
           {
@@ -596,7 +603,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -623,7 +630,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -706,7 +713,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        "src": "/pattern-lab/images/content/backgrounds/background-tall-3.jpg"
       }
     ]
   }
@@ -723,12 +730,12 @@
           border: "horizontal",
           alignItems: "center",
           logo: {
-            src: "/images/sample/PayPal-logo.svg",
+            src: "/pattern-lab/images/content/logos/logo-paypal.svg",
             invert: true
           },
           author: {
             image: {
-              src: "/images/placeholders/500x500.jpg"
+              src: "/pattern-lab/images/placeholders/500x500.jpg"
             },
             name: "Jessica Cuthbertson",
             title: "CEO, RBS"
@@ -792,105 +799,6 @@
       {% endcell %}
 
     {% endgrid %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "3973999413001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-
-{% include "@bolt/video.twig" with {
-  "videoId": "5138448829001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-
-{% include "@bolt/video.twig" with {
-  "videoId": "3974028469001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "5400908626001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-
-{% include "@bolt/video.twig" with {
-  "videoId": "4584402777001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "3979775517001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "4175249227001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "4236820085001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "4922500787001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "5103362380001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "3974028459001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "4763108346001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "3974012235001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "5214595752001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "5273142065001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
-
-{% include "@bolt/video.twig" with {
-  "videoId": "4944556027001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW"
-} only %}
 
 
   {% endblock %}
