--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t3-extra-videos.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t3-extra-videos.twig
@@ -20,7 +20,7 @@
       },
       contentItems: [{
         pattern: "image",
-        src: "/images/sample/product-background-t2.jpg"
+        src: "/pattern-lab/images/content/backgrounds/background-tall-3.jpg"
       }]
     },
     primaryTeaser: {
@@ -233,9 +233,8 @@
           device: "ipad",
           orientation: "landscape",
           color: "black",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--tablet.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--tablet.jpg"
           }
         } only %}
       {% endcell %}
@@ -263,9 +262,8 @@
           device: "ipad",
           orientation: "portrait",
           color: "black",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--tablet-portrait.png"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--tablet-portrait.jpg"
           }
         } only %}
       {% endcell %}
@@ -383,9 +381,8 @@
           device: "iphone8",
           orientation: "portrait",
           color: "black",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -395,9 +392,8 @@
           device: "iphone8",
           orientation: "portrait",
           color: "gold",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -407,9 +403,8 @@
           device: "iphone8",
           orientation: "landscape",
           color: "gold",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -420,9 +415,8 @@
           device: "iphone8",
           orientation: "landscape",
           color: "black",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--phone.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg"
           }
         } only %}
       {% endcell %}
@@ -513,9 +507,8 @@
           device: "macbook",
           orientation: "landscape",
           color: "black",
-          magnify: TRUE,
           image: {
-            src: "/images/sample/product-device-screenshot--desktop.jpg"
+            src: "/pattern-lab/images/content/screenshots/device-screenshot--desktop.jpg"
           }
         } only %}
       {% endcell %}
@@ -573,14 +566,14 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
           text: "Article"
         },
         "logo": {
-          src: "/images/sample/PayPal-logo.svg"
+          src: "/pattern-lab/images/content/logos/logo-paypal.svg"
         },
         "headlines": [
           {
@@ -603,7 +596,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -630,7 +623,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -713,7 +706,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        "src": "/pattern-lab/images/content/backgrounds/background-tall-3.jpg"
       }
     ]
   }
@@ -730,12 +723,12 @@
           border: "horizontal",
           alignItems: "center",
           logo: {
-            src: "/images/sample/PayPal-logo.svg",
+            src: "/pattern-lab/images/content/logos/logo-paypal.svg",
             invert: true
           },
           author: {
             image: {
-              src: "/images/placeholders/500x500.jpg"
+              src: "/pattern-lab/images/placeholders/500x500.jpg"
             },
             name: "Jessica Cuthbertson",
             title: "CEO, RBS"
@@ -799,6 +792,105 @@
       {% endcell %}
 
     {% endgrid %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "3973999413001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+
+{% include "@bolt/video.twig" with {
+  "videoId": "5138448829001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+
+{% include "@bolt/video.twig" with {
+  "videoId": "3974028469001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "5400908626001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+
+{% include "@bolt/video.twig" with {
+  "videoId": "4584402777001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "3979775517001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "4175249227001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "4236820085001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "4922500787001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "5103362380001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "3974028459001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "4763108346001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "3974012235001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "5214595752001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "5273142065001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
+
+{% include "@bolt/video.twig" with {
+  "videoId": "4944556027001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW"
+} only %}
 
 
   {% endblock %}
