--- a/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-20-d8-homepage-video-test.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-20-d8-homepage-video-test.twig
@@ -1,28 +1,48 @@
 {% extends "@bolt/default-template.twig" %}
 
-{% block global_header %}
-  {% include "@bolt/page-header.twig" %}
-{% endblock %}
-
 {% block main_content %}
 
   {% set feature_band_content %}
+    {% include "@bolt/button.twig" with {
+      attributes: {
+        class: [
+          "_c-bolt-button--theme-override"
+        ]
+      },
+      text: "Contact Us"
+    } %}
+
+    <bolt-ratio>
+      <div class="c-brightcove-video u-bolt-width-1/1 o-bolt-ratio" style="padding-bottom: 56.25%;">
+        {# <video data-video-id="4268703476001" data-account="1900410236" data-player="SklWHdrCAZ" data-embed="default" data-application-id
+          class="video-js" controls></video>
+        <script src="//players.brightcove.net/1900410236/SklWHdrCAZ_default/index.min.js" async></script> #}
+
+        {# <video data-video-id="4268703476001" data-account="1900410236" data-player="4yYJJr6Tx" data-embed="default" data-application-id
+          class="video-js" controls></video>
+        <script src="//players.brightcove.net/1900410236/4yYJJr6Tx_default/index.min.js"></script> #}
+
+        <video data-video-id="4268703476001" data-account="1900410236" data-player="4yYJJr6Tx" data-embed="default" data-application-id
+          class="video-js" controls></video>
+        <script src="//players.brightcove.net/1900410236/4yYJJr6Tx_default/index.min.js"></script>
+
+      </div>
+    </bolt-ratio>
     {% include "@bolt/ui-list.twig" with {
       contentItems : [
         {
           contentItems: [
             {
               "pattern": "eyebrow",
-              "text": "Customer Retention",
-              "icon": {
-                name: "product"
-              }
+              "text": "Customer Retention"
             },
             {
               "pattern": "headline",
-              "text": "Personalized. Not Creepy.",
+              "text": link("Personalized. Not Creepy.", "#", {}),
               "size": "large",
-              "url": "https://www.google.com"
+              "icon": {
+                "name": "chevron-right"
+              }
             }
           ]
         },
@@ -81,15 +101,14 @@
       },
       headlines: [
         {
-          type: "headline",
-          text: "We're able to predict that you're going to call before you need to actually contact us.",
-          size: "xxlarge",
-          tag: "h1",
-          quoted: true
+          "type": "headline",
+          "text": "We're able to predict that you're going to call before you need to actually contact us.",
+          "size": "xxlarge",
+          "tag": "h1"
         }
       ],
       logo: {
-        src: "/images/sample/PayPal-logo.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         invert: true
       },
       content: "Powered by real AI, Pega Customer Service delivers game-changing results for enterprises.",
@@ -105,7 +124,7 @@
       ]
     },
     content: feature_band.content | default(content),
-   
+
   } only %}{% endembed %}
 
 
@@ -159,7 +178,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg"
+          "src": "/pattern-lab/images/placeholders/1200x660.jpg"
         },
         {
           "pattern": "headline",
@@ -182,7 +201,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -217,7 +236,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/sample/artificial-intelligence-image.jpg"
+          "src": "/pattern-lab/images/content/promos/promo-16x9-ai.jpg"
         },
         {
           "pattern": "teaser",
@@ -267,7 +286,7 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/sample/salesforce-v-pega.png"
+            src: "/pattern-lab/images/content/promos/promo-16x9-salesforce-vs-pega.png"
           } only %}
         {% endcell %}
 
@@ -318,49 +337,45 @@
       },
   "contentItems": [
     {
-      text: "Product Information",
-      url: "http://google.com",
-      icon: {
-        name: "product"
+      "text": "Product Information",
+      "url": "http://google.com",
+      "icon": {
+        "name": "product"
       }
     },
     {
-      text: "Industry Solutions",
-      url: "http://google.com",
-      icon: {
-        name: "industries"
+      "text": "Industry Solutions",
+      "url": "http://google.com",
+      "icon": {
+        "name": "industries"
       }
     },
     {
-      text: "Training and Certification",
-      url: "http://google.com",
-      icon: {
-        name: "training",
-        background: "circle"
+      "text": "Training and Certification",
+      "url": "http://google.com",
+      "icon": {
+        "name": "training"
       }
     },
     {
-      text: "Vision and Technology",
-      url: "http://google.com",
-      icon: {
-        name: "vision",
-        background: "circle"
+      "text": "Vision and Technology",
+      "url": "http://google.com",
+      "icon": {
+        "name": "vision"
       }
     },
     {
-      text: "Services and Partners",
-      url: "http://google.com",
-      icon: {
-        name: "partners",
-        background: "square"
+      "text": "Services and Partners",
+      "url": "http://google.com",
+      "icon": {
+        "name": "partners"
       }
     },
     {
-      text: "Career Opportunities",
-      url: "http://google.com",
-      icon: {
-        name: "careers",
-        background: "square"
+      "text": "Career Opportunities",
+      "url": "http://google.com",
+      "icon": {
+        "name": "careers"
       }
     }
   ]
