--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -50,7 +50,7 @@ ul.bolt-icon-list-demo {
   margin: 0;
 
   li {
-    margin: 0 0 50px;
+    margin: 25px 0;
     text-align: center;
     width: 25%;
     @media (max-width: 768px) {
