fix issue with flexbox breaking icons

--- a/packages/components/bolt-icon/src/icon.scss
+++ b/packages/components/bolt-icon/src/icon.scss
@@ -44,6 +44,10 @@ bolt-icon {
   color: var(--bolt-color-icon, inherit);
 }
 
+bolt-icon.c-bolt-band--full {
+  margin: 0;
+  transform: translateX(-50%);
+}
 
 bolt-icon[size='small'],
 .c-bolt-icon--small > .c-bolt-icon__icon {
