add z-index demo to pattern  lab

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -62,3 +62,15 @@ ul.bolt-icon-list-demo {
     }
   }
 }
+
+.bolt-z-index-demo {
+  display: inline-block;
+  padding: 3px 25px 3px 3px;
+  border: solid 1px black;
+
+  box-shadow: 2px 2px 4px black;
+
+  p {
+    margin-top: 15px;
+  }
+}
