update z-index demo

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -67,10 +67,7 @@ ul.bolt-icon-list-demo {
   display: inline-block;
   padding: 3px 25px 3px 3px;
   border: solid 1px black;
+  margin-bottom: 15px;
 
   box-shadow: 2px 2px 4px black;
-
-  p {
-    margin-top: 15px;
-  }
 }
