--- a/apps/pattern-lab/src/_patterns/01-styleguide/40-utilities/z-index.twig
+++ b/apps/pattern-lab/src/_patterns/01-styleguide/40-utilities/z-index.twig
@@ -14,6 +14,8 @@
 <h4>How to use</h4>
 
 {{ '```scss
+@import \'@bolt/core\';
+
 .class {
   z-index: z(NAME);
 }
@@ -22,6 +24,8 @@
 <h4>Example</h4>
 
 {{ '```scss
+@import \'@bolt/core\';
+
 .navbar {
   z-index: z(navFixed);
 }
