--- a/packages/components/bolt-card/src/card.scss
+++ b/packages/components/bolt-card/src/card.scss
@@ -65,7 +65,7 @@ bolt-card {
   &:after {
     display: block;
     position: absolute;
-    z-index: -1;
+    z-index: (z("background") - 5);
     top: 0;
     left: 0;
     width: 100%;
