rename zindex function to have bolt- prefix

--- a/packages/components/bolt-brightcove-player/src/brightcove-player.scss
+++ b/packages/components/bolt-brightcove-player/src/brightcove-player.scss
@@ -188,5 +188,5 @@ bolt-video {
 // is-visible
 // transform: translateX(0);
 // transition: all .6s cubic-bezier(.5, -.25, .5, 2) 1s;
-// z-index: z("nav");
+// z-index: bolt-z-index('nav');
 // opacity: .8;
