--- a/packages/components/bolt-button/src/_button.mixins.scss
+++ b/packages/components/bolt-button/src/_button.mixins.scss
@@ -57,7 +57,7 @@
   &:before {
     display: block;
     position: absolute;
-    z-index: (z("background") - 5);
+    z-index: bolt-z-index('background') - 5;
     top: 0;
     left: 0;
     width: 100%;
