--- a/packages/core/styles/02-tools/tools-z-index/_tools-z-index.scss
+++ b/packages/core/styles/02-tools/tools-z-index/_tools-z-index.scss
@@ -12,7 +12,7 @@
   Z Index FUNCTION
 \* ------------------------------------ */
 
-@function z($key) {
+@function bolt-z-index($key) {
   @return map-get($bolt-z-index, $key)
 }
 
