--- a/packages/components/bolt-icon/src/icon.scss
+++ b/packages/components/bolt-icon/src/icon.scss
@@ -39,7 +39,7 @@ bolt-icon {
   width: 1em;
   height: 1em;
   box-sizing: border-box;
-  z-index: z("content");
+  z-index: bolt-z-index('content');
   color: inherit;
   color: var(--bolt-color-icon, inherit);
 }
@@ -82,7 +82,7 @@ bolt-icon[size='xlarge'],
 
 .c-bolt-icon__background {
   position: absolute;
-  z-index: z("contentBottom");
+  z-index: bolt-z-index('contentBottom');
   top: 50%;
   left: 50%;
   width: 100%;
