--- a/packages/components/bolt-video/src/_video.scss
+++ b/packages/components/bolt-video/src/_video.scss
@@ -11,7 +11,7 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
   max-width: none;
   perspective: 1200px;
   perspective-origin: 80% 80%;
-  z-index: z("tooltip");
+  z-index: bolt-z-index('tooltip');
   transition: transform .4s cubic-bezier(.645, 0, .355, 1);
 }
 
@@ -57,7 +57,7 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
   --bolt-color-icon: bolt-color(orange);
 
   position: absolute;
-  z-index: z("tooltip");
+  z-index: bolt-z-index('tooltip');
   top: bolt-spacing(xsmall);
   right: bolt-spacing(xsmall);
   transition: all 0.3s ease;
