--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -69,5 +69,5 @@ ul.bolt-icon-list-demo {
   border: solid 1px black;
   margin-bottom: 15px;
 
-  box-shadow: 2px 2px 4px black;
+  box-shadow: 3px 3px 6px #5c5d66;
 }
